--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        echo 'SECRET_KEY_FILE = "ad*1l0ww@oaoidsf093i9j3_^qz5we%&xd-y65(uwfr=*$bxu"' > /simple_blog_django/secretkey.py
     - name: Run Tests
       run: |
         python manage.py test
